--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Quizzy</title>
+    <script src="https://kit.fontawesome.com/6fd519cc43.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <script src="https://js.stripe.com/v3/"></script>
